# xiaoxiong_music_player

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/requirements/: music-player-requirements-v1.0.md
docs/superpowers/plans/: 2026-06-18-music-player-v1-implementation.md
docs/testing/: manual-test-checklist-v1.md
docs/ui/: ui-redesign-spec.md
i18n/: xiaoxiong_en_US.qm  xiaoxiong_en_US.ts  xiaoxiong_zh_CN.ts
packaging/: .gitignore  release-checklist.md
packaging/inno/: README.md  xiaoxiong_music_player.iss
packaging/inno/languages/: ChineseSimplified.isl
packaging/redist/: README.md
qml/: Main.qml
qml/components/: AnimatedPageSlot.qml  CloseChoiceDialog.qml  DangerButton.qml  GhostButton.qml  GlassPanel.qml  HiResBadge.qml  ImmersiveLyricsPanel.qml  LyricsContextMenu.qml  LyricsPanel.qml  MarqueeLabel.qml  NowPlayingOverlay.qml  PillTabButton.qml  PlaybackBar.qml  PrimaryButton.qml  QueuePanel.qml  RoundedCover.qml  SearchBar.qml  SidebarNavItem.qml  SpectrumVisualizer.qml  ThemedCheckBox.qml  ThemedComboBox.qml  ThemedSlider.qml  ThemedTextField.qml  TrackListDelegate.qml  TrackMetadataCard.qml
qml/pages/: FavoritesPage.qml  LibraryPage.qml  NowPlayingPage.qml  PlaylistPage.qml  PlaylistsPage.qml  SettingsPage.qml
qml/theme/: Theme.qml
resources/: xxmusic.rc
scripts/: build-fcitx5-qt-plugin.sh
src/: main.cpp
src/app/: application_bootstrap.cpp  application_bootstrap.h  single_instance_guard.cpp  single_instance_guard.h  tray_service.cpp  tray_service.h  windows_app_identity.cpp  windows_app_identity.h
src/artwork/: cover_art_service.cpp  cover_art_service.h  library_cover_prefetcher.cpp  library_cover_prefetcher.h
src/download/: online_download_service.cpp  online_download_service.h
src/i18n/: ui_translation_service.cpp
src/lyrics/: lyric_parser.cpp  lyric_parser.h  lyric_service.cpp  lyric_service.h
src/models/: lyric_line.h  playlist_model.h  track_model.h
src/network/: meting_api.cpp  meting_api.h  meting_stream_resolver.cpp  meting_stream_resolver.h
src/player/: audio_spectrum_analyzer.cpp  audio_spectrum_analyzer.h  audio_visualizer_service.cpp  audio_visualizer_service.h  media_session_integration.cpp  media_session_integration.h  playback_service.cpp  playback_service.h  windows_media_session_integration.cpp  windows_media_session_integration.h
src/playlist/: playlist_service.cpp  playlist_service.h
src/search/: search_service.cpp  search_service.h
src/settings/: settings_service.cpp  settings_service.h
src/ui_bridge/: application_controller.cpp  application_controller.h
tests/unit/: test_audio_spectrum_analyzer.cpp  test_lyric_parser.cpp  test_online_download_flow.cpp  test_playlist_service.cpp
